# tiranawalktour

./: .replit  app.py  bookings.json  main.py  pyproject.toml  tours.json
attached_assets/: Pasted-Classic-Albania-6-days-Tirana-Berat-Gjirokast-r-Saranda-Day-1-Arrival-in-Tirana-City--1757932901647_1757932901648.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1757933268274_1757933268274.txt
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  index.html
templates/admin/: dashboard.html
translations/ar/LC_MESSAGES/: messages.mo  messages.po
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/it/LC_MESSAGES/: messages.mo  messages.po
